opam-version: "2.0"
maintainer: "rizo@odis.io"
authors: ["Rizo I. <rizo@odis.io>" "Josh Allmann <joshua.allmann@gmail.com>"]
homepage: "https://github.com/odis-labs/ocaml-mqtt"
synopsis: "MQTT client implementation for OCaml and ReasonML"
license: "BSD-3-clause"
bug-reports: "https://github.com/odis-labs/ocaml-mqtt/issues"
dev-repo: "git://github.com/odis-labs/ocaml-mqtt"
tags: ["telemetry" "mqtt" "network" "protocol"]
depends: [
  "ocplib-endian" {>= "0.6"}
  "logs"
  "fmt" {>= "0.8.7"}
  "lwt"
  "lwt_ppx"
  "tls"
  "dune" {>= "2.8.0"}
  # Test dependencies
  "alcotest" {with-test & >= "1.5.0"}
  "alcotest-lwt" {with-test & >= "1.5.0"}
  "cohttp" {with-test & >= "5.0.0"}
  "cohttp-lwt-unix" {with-test & >= "5.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
