opam-version: "2.0"
maintainer: "joshua.allmann@gmail.com"
authors: ["Josh Allmann <joshua.allmann@gmail.com>"]
homepage: "https://github.com/j0sh/ocaml-mqtt"
synopsis: "MQTT message parser in OCaml"
license: "BSD-3-clause"
bug-reports: "https://github.com/j0sh/ocaml-mqtt/issues"
dev-repo: "git://github.com/j0sh/ocaml-mqtt"
tags: ["telemetry" "mqtt" "network"]
depends: [
  "ocaml" {>= "4.01.0"}
  "ocamlfind"
  "ocplib-endian" {>= "0.6"}
  "ounit"
  "lwt"
  "ocamlbuild" {build}
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
url {
  src: "https://github.com/j0sh/ocaml-mqtt/archive/v0.0.2.tar.gz"
  checksum: "md5=1a616fbfbe43ff1043c24c85e5956feb"
}
